--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -11,7 +11,7 @@ body:
       value: |
         Thanks for taking the time to fill out this feature request!
   - type: textarea
-    id: what-do-you-want?
+    id: what-do-you-want
     attributes:
       label: What would you like to see?
       description: Also tell us, if there is an extended description somewhere
