--- a/.github/workflows/timespent-marked.yml
+++ b/.github/workflows/timespent-marked.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Get linked issues
         id: get-issues
         run: |
-          PR_BODY=$(gh pr view ${{ github.event.pull_request.number }} --json body -q .body)
+          PR_BODY=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json body -q .body)
           ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#')
           echo "ISSUE_NUMBERS=$ISSUE_NUMBERS" >> $GITHUB_ENV
         env:
@@ -26,7 +26,7 @@ jobs:
         run: |
           MISSING_TIMESPENT=""
           for ISSUE in $ISSUE_NUMBERS; do
-            BODY=$(gh issue view "$ISSUE" --json body -q .body)
+            BODY=$(gh issue view "$ISSUE" --repo ${{ github.repository }} --json body -q .body)
             if echo "$BODY" | grep -q '/Timespent Xh Ym'; then
               MISSING_TIMESPENT+="$ISSUE "
             fi
