--- a/.github/workflows/timespent-marked.yml
+++ b/.github/workflows/timespent-marked.yml
@@ -12,11 +12,23 @@ jobs:
   check-timespent:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository (just in case)
+        uses: actions/checkout@v4
+
+      - name: Authenticate GitHub CLI
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+          gh auth status
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get linked issues
         id: get-issues
         run: |
           PR_BODY=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json body -q .body)
+          echo "PR Body: $PR_BODY"
           ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#')
+          echo "Found Issues: $ISSUE_NUMBERS"
           echo "ISSUE_NUMBERS=$ISSUE_NUMBERS" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
