--- a/.github/workflows/timespent-marked.yml
+++ b/.github/workflows/timespent-marked.yml
@@ -16,9 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Authenticate GitHub CLI
-        run: |
-          gh auth login
-          gh auth status
+        run: gh auth status
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
