--- a/.github/workflows/timespent-marked.yml
+++ b/.github/workflows/timespent-marked.yml
@@ -30,7 +30,7 @@ jobs:
           echo "ISSUE_NUMBERS=$ISSUE_NUMBERS" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      
       - name: Check Timespent in Issues
         id: check-timespent
         run: |
@@ -39,6 +39,7 @@ jobs:
             BODY=$(gh issue view "$ISSUE" --repo ${{ github.repository }} --json body -q .body)
             if echo "$BODY" | grep -q '/Timespent Xh Ym'; then
               MISSING_TIMESPENT+="$ISSUE "
+              gh issue comment "$ISSUE" --repo ${{ github.repository }} --body "❌ This pull request has issues that haven't had their Timespent value updated. Please update $MISSING_TIMESPENT before merging the PR."
             fi
           done
           if [ -n "$MISSING_TIMESPENT" ]; then
@@ -47,3 +48,4 @@ jobs:
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
