--- a/.github/workflows/verify-timespent.yml
+++ b/.github/workflows/verify-timespent.yml
@@ -7,6 +7,13 @@ on:
       - edited
       - synchronize
       - reopened
+      
+  workflow_dispatch:
+    inputs:
+      pull_request_number:
+        description: 'Pull request number'
+        required: true
+        type: string
 
 jobs:
   check-timespent:
