--- a/.github/workflows/issue-updated-timespent.yml
+++ b/.github/workflows/issue-updated-timespent.yml
@@ -8,10 +8,8 @@ jobs:
   trigger-pr-workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: Authenticate GitHub CLI
-        run: gh auth status
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
           
       - name: Find Related PRs
         id: find-prs
