--- a/.github/workflows/verify-timespent.yml
+++ b/.github/workflows/verify-timespent.yml
@@ -26,7 +26,7 @@ jobs:
         id: get-issues
         run: |
           # Use the pull_request_number input passed in workflow_dispatch
-          PR_BODY=$(gh pr view ${{ inputs.pull_request_number }} --repo ${{ github.repository }} --json body -q .body)
+          PR_BODY=$(gh pr view --repo ${{ github.repository }} ${{ inputs.pull_request_number }} --json body -q .body)
           echo "PR Body: $PR_BODY"
           ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#')
           echo "Found Issues: $ISSUE_NUMBERS"
@@ -39,7 +39,7 @@ jobs:
         run: |
           MISSING_TIMESPENT=""
           for ISSUE in $ISSUE_NUMBERS; do
-            BODY=$(gh issue view "$ISSUE" --repo ${{ github.repository }} --json body -q .body)
+            BODY=$(gh issue view --repo ${{ github.repository }} "$ISSUE" --json body -q .body)
             if echo "$BODY" | grep -q '/Timespent Xh Ym'; then
               MISSING_TIMESPENT+="#$ISSUE "
             fi
