--- a/.github/workflows/verify-timespent.yml
+++ b/.github/workflows/verify-timespent.yml
@@ -26,7 +26,7 @@ jobs:
         id: get-issues
         run: |
           # Use the pull_request_number input passed in workflow_dispatch
-          PR_BODY=$(gh pr view --repo "${{ github.repository }}" "${{ inputs.pull_request_number }}" --json body -q .body)
+          PR_BODY=$(gh pr view --repo "${{ github.repository }}" ${{ inputs.pull_request_number }} --json body -q .body)
           echo "PR Body: $PR_BODY"
           ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#')
           echo "Found Issues: $ISSUE_NUMBERS"
