--- a/.github/workflows/verify-timespent.yml
+++ b/.github/workflows/verify-timespent.yml
@@ -28,7 +28,7 @@ jobs:
           # Use the pull_request_number input passed in workflow_dispatch
           PR_BODY=$(gh pr view ${{ inputs.pull_request_number }} --json body -q .body)
           echo "PR Body: $PR_BODY"
-          ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#')
+          ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#' | tr '\n' ' ')
           echo "Found Issues: $ISSUE_NUMBERS"
           echo "ISSUE_NUMBERS=$ISSUE_NUMBERS" >> $GITHUB_ENV
         env:
