--- a/.github/workflows/verify-timespent.yml
+++ b/.github/workflows/verify-timespent.yml
@@ -7,7 +7,7 @@ on:
       - edited
       - synchronize
       - reopened
-      
+
   workflow_dispatch:
     inputs:
       pull_request_number:
@@ -25,8 +25,18 @@ jobs:
       - name: Get linked issues
         id: get-issues
         run: |
-          # Use the pull_request_number input passed in workflow_dispatch
-          PR_BODY=$(gh pr view ${{ inputs.pull_request_number }} --json body -q .body)
+          # Check if pull_request_number is passed via workflow_dispatch
+          PR_NUMBER="${{ github.event.inputs.pull_request_number || github.event.pull_request.number }}"
+
+          # If PR_NUMBER is empty, we fallback to repository context
+          if [ -z "$PR_NUMBER" ]; then
+            echo "No PR number found, using repository context only."
+            PR_BODY=$(gh pr view --repo ${{ github.repository }} --json body -q .body)
+          else
+            echo "Using PR number: $PR_NUMBER"
+            PR_BODY=$(gh pr view "$PR_NUMBER" --repo ${{ github.repository }} --json body -q .body)
+          fi
+
           echo "PR Body: $PR_BODY"
           ISSUE_NUMBERS=$(echo "$PR_BODY" | grep -oE '#[0-9]+' | tr -d '#' | tr '\n' ' ')
           echo "Found Issues: $ISSUE_NUMBERS"
@@ -44,15 +54,15 @@ jobs:
               MISSING_TIMESPENT+="#$ISSUE "
             fi
           done
-      
+
           if [ -n "$MISSING_TIMESPENT" ]; then
             COMMENT_BODY="❌ The following issues are missing an updated Timespent value: $MISSING_TIMESPENT
             Please update them before merging this PR."
             echo "$COMMENT_BODY"
-      
+
             # Post comment on the PR
-            gh pr comment ${{ inputs.pull_request_number }} --body "$COMMENT_BODY"
-            
+            gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$COMMENT_BODY"
+
             exit 1
           fi
         env:
