--- a/.github/workflows/issue-updated-timespent.yml
+++ b/.github/workflows/issue-updated-timespent.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           for PR in $RELATED_PRS; do
             # Explicitly pass the pull_request_number to the workflow
-            gh workflow run verify-timespent.yml -f pull_request_number="$PR" --repo ${{ github.repository }}
+            gh workflow run check-timespent.yml -f pull_request_number="$PR" --repo ${{ github.repository }}
           done
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
