--- a/.github/workflows/check-timespent.yml
+++ b/.github/workflows/check-timespent.yml
@@ -63,8 +63,15 @@ jobs:
 
             # Post comment on the PR
             gh pr comment $PR_NUMBER --repo ${{ github.repository }} --body "$COMMENT_BODY"
+            # Set PR status to failure (this blocks the merge)
+            gh pr check $PR_NUMBER --repo ${{ github.repository }} --status failure --description "Timespent is missing"
 
             exit 1
+            
+          else
+            # If Timespent is present, mark PR status as successful
+            gh pr check $PR_NUMBER --repo ${{ github.repository }} --status success --description "Timespent is updated"
+
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
