--- a/.github/workflows/check-timespent.yml
+++ b/.github/workflows/check-timespent.yml
@@ -8,13 +8,6 @@ on:
       - synchronize
       - reopened
 
-  workflow_dispatch:
-    inputs:
-      pull_request_number:
-        description: 'Pull request number'
-        required: true
-        type: string
-
 jobs:
   check-timespent:
     runs-on: ubuntu-latest
@@ -26,7 +19,7 @@ jobs:
         id: get-issues
         run: |
           # Check if pull_request_number is passed via workflow_dispatch
-          PR_NUMBER="${{ github.event.inputs.pull_request_number || github.event.pull_request.number }}"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
 
           # If PR_NUMBER is empty, we fallback to repository context
           if [ -z "$PR_NUMBER" ]; then
@@ -61,16 +54,8 @@ jobs:
             Please update them before merging this PR."
             echo "$COMMENT_BODY"
 
-            # Post comment on the PR
-            gh pr comment $PR_NUMBER --repo ${{ github.repository }} --body "$COMMENT_BODY"
-
             # Request changes on the PR (this blocks the merge)
             gh pr review $PR_NUMBER --repo ${{ github.repository }} --request-changes --body "$COMMENT_BODY"
-
-          else
-            # If Timespent is present, leave an approval (optional)
-            echo "Timespent updated! PR is approved."
-            gh pr review $PR_NUMBER --repo ${{ github.repository }} --approve
             
           fi
         env:
